<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/county_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginLeft="16dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="bottom" />
        </FrameLayout>

        <TextView
            android:id="@+id/tentang"
            style="@style/TextContent.SubTitle"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/country_detail"
            style="@style/TextContent"
            android:layout_marginBottom="10dp"
            android:lineSpacingMultiplier="1"/>

        <TextView
            style="@style/TextContent.SubTitle"
            android:text="Informasi Negara"
            android:layout_marginLeft="16dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                style="@style/TextContent.TableRow" >

                <TextView
                    style="@style/TextContent.NameRow"
                    android:text="@string/ibu_kota"/>

                <TextView
                    android:id="@+id/capital_contry"
                    style="@style/TextContent.ContentRow" />
            </TableRow>

            <TableRow
                style="@style/TextContent.TableRow" >

                <TextView
                    style="@style/TextContent.NameRow"
                    android:text="@string/pemimpin"/>

                <TextView
                    android:id="@+id/lead_contry"
                    style="@style/TextContent.ContentRow" />
            </TableRow>

            <TableRow
                style="@style/TextContent.TableRow" >

                <TextView
                    style="@style/TextContent.NameRow"
                    android:text="@string/bahasa_nasional"/>

                <TextView
                    android:id="@+id/lang_contry"
                    style="@style/TextContent.ContentRow" />
            </TableRow>

            <TableRow
                style="@style/TextContent.TableRow" >

                <TextView
                    style="@style/TextContent.NameRow"
                    android:text="@string/luas_wilayah"/>

                <TextView
                    android:id="@+id/area_contry"
                    style="@style/TextContent.ContentRow" />
            </TableRow>

            <TableRow
                style="@style/TextContent.TableRow" >

                <TextView
                    style="@style/TextContent.NameRow"
                    android:text="@string/mata_uang"/>

                <TextView
                    android:id="@+id/money_contry"
                    style="@style/TextContent.ContentRow" />
            </TableRow>
        </TableLayout>


    </LinearLayout>
</ScrollView>